--- a/with-dva/package.json
+++ b/with-dva/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "react-intl": "^2.4.0",
-    "umi-plugin-react": "^1.0.0-beta.17"
+    "umi-plugin-react": "^1.0.0-beta.17",
+    "redux": "^4.0.0",
+    "redux-persist": "^5.10.0"
   }
 }
